<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_black_seven_fit"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_top_corner_radius"
            android:orientation="vertical">

            <fitnessapp.workout.homeworkout.view.CMTextView
                android:textSize="24sp"
                android:textColor="@color/green_seven_fit"
                android:fontFamily="@font/barlow_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_15sdp"
                android:text="@string/sound_options" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mute_gray" />

                <fitnessapp.workout.homeworkout.view.CTextView
                    android:textSize="16sp"
                    android:textColor="@color/white_seven_fit"
                    android:layout_width="0dp"
                    android:fontFamily="@font/barlow_regular"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:text="@string/mute" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchMute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_light_" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vector_voice_guide_gray_selector" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/_10sdp">

                    <fitnessapp.workout.homeworkout.view.CTextView
                        android:textSize="16sp"
                        android:textColor="@color/white_seven_fit"
                        android:fontFamily="@font/barlow_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:text="@string/voice_guide" />

                    <fitnessapp.workout.homeworkout.view.CTextView
                        android:textSize="16sp"
                        android:textColor="@color/white_seven_fit"
                        android:fontFamily="@font/barlow_regular"
                        android:layout_width="match_parent"
                        android:visibility="gone"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:text="@string/voice_guide_des" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchVoiceGuide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_light_" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vector_coach_tip_gray_selector" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/_10sdp">

                    <fitnessapp.workout.homeworkout.view.CTextView
                        android:textSize="16sp"
                        android:textColor="@color/white_seven_fit"
                        android:fontFamily="@font/barlow_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:text="@string/coach_tips" />

                    <fitnessapp.workout.homeworkout.view.CTextView
                        android:textSize="16sp"
                        android:textColor="@color/white_seven_fit"
                        android:fontFamily="@font/barlow_regular"
                        android:layout_width="match_parent"
                        android:visibility="gone"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:text="@string/coach_tips_des" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchCoachTips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:padding="@dimen/_12sdp">

                <fitnessapp.workout.homeworkout.view.CBTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_medium"
                    android:textColor="@color/white_seven_fit"
                    android:textSize="18sp"
                    android:gravity="end"
                    android:text="@string/ok"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</layout>