<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="handler"
            type="fitnessapp.workout.homeworkout.stretching.DiscoverActivity.ClickHandler" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/topbar"
                layout="@layout/topbar" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_dark" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_25sdp"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:cardCornerRadius="7dp"
                    app:cardElevation="3dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    android:onClick="@{(v)->handler.onTopPlanClick()}">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imgCover"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_130sdp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cover_morning" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginEnd="@dimen/_30sdp"
                            android:layout_marginBottom="@dimen/_15sdp"
                            android:orientation="vertical">

                            <fitnessapp.workout.homeworkout.view.CBTextView
                                android:id="@+id/tvTitle"
                                style="@style/txt_fff_20"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="2 Min lower Back Stretching" />

                            <fitnessapp.workout.homeworkout.view.CMTextView
                                android:id="@+id/tvDesc"
                                style="@style/txt_fff_16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:ellipsize="end"
                                android:maxLines="2"
                                android:text="@string/dummy_text" />

                        </LinearLayout>

                    </FrameLayout>


                </androidx.cardview.widget.CardView>

                <fitnessapp.workout.homeworkout.view.CBTextView
                    style="@style/txt_000_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:text="@string/pain_relief" />

                <fitnessapp.workout.homeworkout.HeightWrappingViewPager
                    android:id="@+id/painReliefViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"/>

                <fitnessapp.workout.homeworkout.view.CBTextView
                    style="@style/txt_000_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:text="@string/training_goal" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTrainingGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingStart="@dimen/_5sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_training_goal" />

                <fitnessapp.workout.homeworkout.view.CBTextView
                    style="@style/txt_000_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:text="@string/flexibility" />

                <fitnessapp.workout.homeworkout.HeightWrappingViewPager
                    android:id="@+id/flexibilityViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"/>

                <fitnessapp.workout.homeworkout.view.CBTextView
                    style="@style/txt_000_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:text="@string/more" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvMyTraining"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    app:cardBackgroundColor="@color/whats_your_goal_card_bg_color"
                    app:cardCornerRadius="7dp"
                    app:cardElevation="3dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:onClick="@{(v)->handler.onMyTrainingClick()}">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cover_my_training" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingStart="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_15sdp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/icon_add_my_training_white" />

                            <fitnessapp.workout.homeworkout.view.CBTextView
                                style="@style/txt_fff_18"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:text="@string/menu_my_training"
                                android:textAllCaps="true" />

                        </LinearLayout>

                    </FrameLayout>

                </androidx.cardview.widget.CardView>

                <fitnessapp.workout.homeworkout.view.CBTextView
                    style="@style/txt_000_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:text="@string/for_beginners" />

                <fitnessapp.workout.homeworkout.HeightWrappingViewPager
                    android:id="@+id/forBeginnerViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"/>

                <fitnessapp.workout.homeworkout.view.CBTextView
                    style="@style/txt_000_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:text="@string/posture_correction" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPostureCorrection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_training_goal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

                <fitnessapp.workout.homeworkout.view.CBTextView
                    style="@style/txt_000_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:text="@string/fat_burning" />

                <fitnessapp.workout.homeworkout.HeightWrappingViewPager
                    android:id="@+id/fatBurningViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"/>

                <fitnessapp.workout.homeworkout.view.CBTextView
                    style="@style/txt_000_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:text="@string/body_focus" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvBodyFocus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    tools:listitem="@layout/item_training_goal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

                <fitnessapp.workout.homeworkout.view.CBTextView
                    style="@style/txt_000_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:text="@string/duration" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:listitem="@layout/item_duration"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/llAdView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="visible"/>

        <LinearLayout
            android:id="@+id/llAdViewFacebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:orientation="vertical"
            android:visibility="visible" />
    </LinearLayout>

</layout>